# md-editor

./: index.html  package-lock.json  package.json  plan.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: EditorPane.vue  PreviewPane.vue  Toolbar.vue
src/stores/: editor.ts  settings.ts
src/styles/: editor.css  preview.css  variables.css
src/utils/: markdown.ts
