[package]
name = "md-editor"
version = "0.1.0"
description = "A modern, distraction-free Markdown editor built with Tauri 2 and Vue 3"
authors = ["you"]
edition = "2021"

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

